# SDCD-Hackaton-XYZ-Extractor

./: LICENSE  README.md  enhancing.py  setup.cfg  simple_parsing.py  split.py  test.ipynb
app/: .gitignore  package-lock.json  package.json
app/src/: App.css  App.js
app/src/backend/: app.py
app/src/backend/modules/: eXYZractor.py
src/eXYZtractor/: example.py  extract_text_xyz.py
