[metadata]
name = eXYZtractor


[options]
install_requires =
    PyPDF2 >= 3.0.1
python_requires = >= 3.11
setup_requires =
    setuptools
package_dir =
    = src
packages = find_namespace:
[options.packages.find]
where = src

[options.extras_require]
dev =
    black>=21.12b0
    flake8>=6.1.0
    isort>=5.12.0